--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -11,18 +11,15 @@ main{
     margin: auto;
     border-radius:10px;
 }
-h1{
+h1,h2,h3{
+    font-family: 'Times New Roman', Times, serif;
     color: rgb(2, 63, 63);
     text-align: center;
     box-shadow: rgb(2, 39, 39);
 }
-h2{
-    color:rgb(2, 63, 63);
-}
-h3{
-color: rgb(2, 63, 63);
-}
+
 p{
+    font-family: Arial, Helvetica, sans-serif;
     color: rgb(1, 32, 32);
     text-align: justify;
 }
