--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 main{
     background-color: #5FCDD9;
-    width: 600px;
+    width: 1000px auto;
     box-shadow: 5px 5px 15px #000000;
     padding: 10px;
     margin: auto;
