--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 }
 main{
     background-color: #5FCDD9;
-    width: 1000px auto;
+    min-width: 260px;
+    max-width: 800px;
     box-shadow: 5px 5px 15px #000000;
     padding: 10px;
     margin: auto;
